Fixed the getting stuck in qsub bug and the wedges highlighting in qsub

--- a/src/stylesheets/css/AbridgedModal.css
+++ b/src/stylesheets/css/AbridgedModal.css
@@ -9,60 +9,51 @@
   word-wrap: wrap;
   margin: 0;
   text-align: center;
-  vertical-align: middle;
-}
-.AbridgedModalTitle div {
-  margin: 5px 15px;
-}
+  vertical-align: middle; }
+  .AbridgedModalTitle div {
+    margin: 5px 15px; }
 
 .AbridgedComponents {
   position: fixed;
   border: 5px solid black;
   top: 150px;
   left: 100px;
-  margin: 0;
-}
+  margin: 0; }
 
 .CheckBoxDiv, .NumberDiv, .TimeDiv, .PathDiv, .TextDiv {
   margin: 10px;
-  border-radius: 5px;
-}
-.CheckBoxDiv div, .NumberDiv div, .TimeDiv div, .PathDiv div, .TextDiv div {
-  display: inline-block;
-  margin: 10px 5px 10px 10px;
-  text-align: center;
-  vertical-align: middle;
-}
+  border-radius: 5px; }
+  .CheckBoxDiv div, .NumberDiv div, .TimeDiv div, .PathDiv div, .TextDiv div {
+    display: inline-block;
+    margin: 10px 5px 10px 10px;
+    text-align: center;
+    vertical-align: middle; }
 
 .PathDiv .Label, .TextDiv .Label {
   margin: 10px 10px 0 10px;
   display: block;
-  text-align: left;
-}
+  text-align: left; }
 .PathDiv input, .TextDiv input {
   margin: 0 10px 10px 10px;
-  width: 275px;
-}
+  width: 275px; }
 
 .CheckBox {
   width: 20px;
   height: 20px;
   border: 2px solid black;
-  background-color: white;
-}
-.CheckBox svg {
-  display: none;
-  position: relative;
-  top: -1px;
-  left: -1px;
-}
+  background-color: white; }
+  .CheckBox svg {
+    display: none;
+    position: relative;
+    top: -1px;
+    left: -1px; }
 
 .TimeDiv input {
   width: 25px;
-  margin: 5px;
-}
+  margin: 5px; }
 
 .NumberDiv input {
   width: 25px;
-  margin: 5px;
-}
+  margin: 5px; }
+
+/*# sourceMappingURL=AbridgedModal.css.map */
