--- a/src/stylesheets/css/CommandWindow.css
+++ b/src/stylesheets/css/CommandWindow.css
@@ -4,79 +4,64 @@
   top: 50px;
   left: 50px;
   background-color: black;
-  color: white;
-}
-.CommandWindowTitle div {
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  margin: 0 6px 5px 0;
-}
+  color: white; }
+  .CommandWindowTitle div {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0 6px 5px 0; }
 
 .CloseOutline {
   height: 24px;
-  background-color: white;
-}
+  background-color: white; }
 
 .CommandBox {
   background-color: #353535;
-  padding: 6px 12px;
-}
+  padding: 6px 12px; }
 
 .Close {
   height: 16px;
-  margin: 5px;
-}
+  margin: 5px; }
 
 .CommandLabel {
   margin: 0 6px 0 0;
-  color: black;
-}
+  color: black; }
 .CommandBase {
-  padding: 0 3px 0 0;
-}
+  padding: 0 3px 0 0; }
 .CommandBase, .CommandArgument {
   border-radius: 10px;
-  margin: 6px 3px;
-}
-.CommandBase div, .CommandArgument div {
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-}
+  margin: 6px 3px; }
+  .CommandBase div, .CommandArgument div {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle; }
 .CommandArgument {
-  border: 1px solid white;
-}
-.CommandArgument div {
-  margin: 5px;
-}
+  border: 1px solid white; }
+  .CommandArgument div {
+    margin: 5px; }
 
 .CommandButton {
   font-size: 14px;
   border: 2px solid black;
-  border-radius: 50px;
+    border-radius: 50px;
   background-color: white;
   color: black;
   display: inline-block;
   margin: 15px;
-  padding: 10px 20px;
-}
-.CommandButton:hover {
-  box-shadow: 0 0 0 5px #D9D9D9;
-}
-.CommandButton:active {
-  background-color: #D9D9D9;
-}
-.CommandButton:disabled {
-  background-color: #999;
-  color: #666;
-  border-color: #666;
-}
-.CommandButtonContainer {
-  background-color: white;
-  border-top: 3px solid black;
-}
+  padding: 10px 20px; }
+  .CommandButton:hover {
+    box-shadow: 0 0 0 5px #D9D9D9; }
+  .CommandButton:active {
+    background-color: #D9D9D9; }
+  .CommandButton:disabled {
+    background-color: #999;
+    color: #666;
+    border-color: #666; }
+  .CommandButtonContainer {
+    background-color: white;
+    border-top: 3px solid black; }
 
 #Execute {
-  color: red;
-}
+  color: red; }
+
+/*# sourceMappingURL=CommandWindow.css.map */
